Feat: 权限类型使用图标展示